codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_good_result_note_without_diagnostics.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
▌ Tell us more (good result)
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
