codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_answer_interleave_committed.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4199
expression: rendered
---
• 1. what's my name?
     A: Your name is Tuan-Lung.
  2. what are we doing?
     A: We are testing interleaving.
