codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_answer_interleave_pending.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4192
expression: pending
---
• 1. Your name is Tuan-Lung.
  2. We are testing interleaving.
  
  restructuring answer...
